# gdebenz-app

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml  delete-release.yml  rename-release.yml  samsung-release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/android-widget/: GdeBenzWidget.kt  gdebenz_widget_info.xml
src-tauri/android-widget/kt/: GdeBenzWidget.kt  GdeBenzWidgetMap.kt  GdeBenzWidgetSmall.kt  GdeBenzWidgetWide.kt  WidgetCommon.kt
src-tauri/android-widget/layout/: gdebenz_widget.xml  gdebenz_widget_map.xml  gdebenz_widget_small.xml  gdebenz_widget_wide.xml
src-tauri/android-widget/xml/: gdebenz_widget_info_map.xml  gdebenz_widget_info_small.xml  gdebenz_widget_info_wide.xml
src-tauri/inject/: toggle.js
src-tauri/src/: lib.rs  main.rs
