[package]
name = "gdebenz"
version = "1.0.23"
description = "GdeBenz — приложение для https://gdebenz.ru/"
edition = "2021"

[lib]
name = "gdebenz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[profile.release]
codegen-units = 1
lto = true
strip = true
